--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=screenmatch
+spring.datasource.url=jdbc:postgresql://localhost/alura_series
+spring.datasource.username=postgres
+spring.datasource.password=5D849d6bc76
+spring.datasource.driver-class-name=org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
